fixed navbar hidden under flipcards \w -Mahdi Ben Ameur

--- a/src/components/Notes/Notes.css
+++ b/src/components/Notes/Notes.css
@@ -1,75 +1,67 @@
+#Note {
+  margin-top: 30px;
+  background-color: rgb(125, 130, 131);
+  border-radius: 10px;
+  margin-left: 80px;
+  margin-right: 150px;
+  width: 400px;
+  height: 250px;
+  padding: 10px;
+  box-shadow: 0 0 40px rgba(8, 7, 16, 0.6);
+}
+#List-Notes {
+  margin-top: 30px;
+  margin-bottom: 30px;
+  background-color: rgb(125, 130, 131);
+  border-radius: 10px;
+  margin-left: 80px;
+  margin-right: 150px;
 
-#Note{
-    margin-top: 30px;
-    background-color: rgb(125, 130, 131);
-    border-radius: 10px;
-    margin-left: 80px;
-    margin-right: 150px;
-    width: 400px;
-    height:250px;
-    padding: 10px;
-    box-shadow: 0 0 40px rgba(8,7,16,0.6); 
+  padding: 10px;
+  box-shadow: 0 0 40px rgba(8, 7, 16, 0.6);
+  align-items: center;
 }
-#List-Notes{
-    margin-top: 30px;
-    margin-bottom: 30px;
-    background-color: rgb(125, 130, 131);
-    border-radius: 10px;
-    margin-left: 80px;
-    margin-right: 150px;
-    
-    padding: 10px;
-    box-shadow: 0 0 40px rgba(8,7,16,0.6); 
-    align-items: center;
+td {
+  margin-bottom: 10px;
+  padding: 30px;
 }
-td{
-    margin-bottom: 10px;
-    padding: 30px;
-    
-}
-#Information{
-    display: flex;
-    margin-top: 5px;
-    border-radius: 10px;
-    
-   
+#Information {
+  display: flex;
+  margin-top: 5px;
+  border-radius: 10px;
 }
 
 #Link:hover {
-    color: rgb(129, 64, 183);
-  }
-#Link:not(:hover){
-    color: rgb(0, 0, 0);
+  color: rgb(129, 64, 183);
 }
-#page{
-    margin-top: 10%;
-    margin-bottom: 30px;
-    background-color: rgb(204, 204, 204);
-    border-radius: 10px;
-    margin-left: 150px;
-    margin-right: 150px;
-    margin-top: 9%;
-    padding: 10px;
-    box-shadow: 0 0 40px rgba(8,7,16,0.6); 
-    align-items: center;
+#Link:not(:hover) {
+  color: rgb(0, 0, 0);
 }
-#buttons{
-
-
-    padding: 5px;
+#page {
+  margin-top: 10%;
+  margin-bottom: 30px;
+  background-color: rgb(204, 204, 204);
+  border-radius: 10px;
+  margin-left: 150px;
+  margin-right: 150px;
+  margin-top: 9%;
+  padding: 10px;
+  box-shadow: 0 0 40px rgba(8, 7, 16, 0.6);
+  align-items: center;
 }
-#but{
-    display: block;
-    margin: 3px;
-    size: 32px;
-    
+#buttons {
+  padding: 5px;
 }
-#C{
-    background-image: url('../../assets/isimm4.jpg');
-    background-size: cover; 
-    background-repeat: no-repeat;
-
-    height: 120vh;
-    padding-top: 1%;
-    
+#but {
+  display: block;
+  margin: 3px;
+  size: 32px;
+}
+#C {
+  background-image: url("../../assets/isimm4.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  overflow-y: hidden;
+  height: 100vh;
+  padding-top: 1%;
 }
