--- a/src/components/commun/navbar/NavBar2.css
+++ b/src/components/commun/navbar/NavBar2.css
@@ -1,20 +1,12 @@
-html,
-body {
-  margin: 0;
-  padding: 0;
-  width: 100%;
-}
-
-body {
-  font-family: "Helvetica Neue", sans-serif;
-  font-weight: lighter;
-}
-
 header {
   width: 100%;
   background: url(https://wallpaper.wiki/wp-content/uploads/2017/05/wallpaper.wiki-Beautiful-Full-HD-Wallpaper-Download-Free-PIC-WPE0010098.jpg)
     no-repeat 50% 50%;
   background-size: cover;
+}
+.wrapper {
+  z-index: 1;
+  position: fixed;
 }
 
 .logo {
